# PlasmaColorizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  plasmacolorizer.desktop  pyproject.toml  requirements.txt  run.sh
src/plasmacolorizer/: __init__.py  __main__.py  app.py  app_icon.py  workers.py
src/plasmacolorizer/conky/: __init__.py  autostart.py  fetch.py  presets.py  settings_store.py  templating.py  themes.py  weather_locations.py
src/plasmacolorizer/conky/templates/: shortcuts.conf.tpl  system.conf.tpl  verse.conf.tpl  weather.conf.tpl
src/plasmacolorizer/core/: __init__.py  kde_prefs.py  logger.py  palette.py  plasma_scheme.py  wallpaper.py
src/plasmacolorizer/icons/: __init__.py
src/plasmacolorizer/ui/: __init__.py  main_window.py  style.py
tests/: test_app_icon.py  test_conky_autostart.py  test_conky_fetch.py  test_conky_presets.py  test_palette_merge.py  test_scheme_remapping.py  test_templating.py  test_wallpaper.py
