[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plasmacolorizer"
version = "0.1.0"
description = "Material You–driven Plasma color schemes and Conky templating for KDE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.6",
  "materialyoucolor>=3.0",
  "dbus-python>=1.3.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
plasmacolorizer = "plasmacolorizer.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
plasmacolorizer = [
  "conky/templates/*.conf.tpl",
  "icons/*.svg",
  "icons/*.png",
]
